Fixed some content cropping issues on mobile

--- a/assets/fbla_css/master.scss
+++ b/assets/fbla_css/master.scss
@@ -86,7 +86,6 @@ body {
 	margin: 1rem;
 	margin-bottom: 4px;
 
-	max-height: 25em;
 	line-height: 1em;
 	overflow-x: hidden;
 	overflow-y: hidden;
